--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html>
 <head style="background-color: SlateGray;">
 	<meta charset="utf-8">
-	<title>Tianlin Huang</title>
+	<title>Tianlin's Website</title>
 </head>
 
 <body style="background-color: Snow;">
 	<h1><center>Tianlin Huang</center></h1>
-
 	<div class="quote">
-	<p style="color: gray;"><i>“Now You See Me.”</i></p>
+	<p style="color: gray;"><i><center>“Now You See Me.”</center></i></p>
 		</div>
-	
 	<div class="about">	
-	<h2>&nbsp;&nbsp;网页施工中。。。</h2>
+	<h2>&nbsp;&nbsp;网站施工中。。。</h2>
 		</div>
 </body>
 </html>
