--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
 <body style="background-color: Snow;">
 	<h1><center>Tianlin Huang</center></h1>
 	<div class="quote">
-	<p style="color: gray;"><i><center>“Now You See Me.”</center></i></p>
+	<p style="color: gray;"><i><center><q>Now You See Me.</q></center></i></p>
 		</div>
+	<h>
+	</h>
+	<h>
+	</h>
 	<div class="about">	
-	<h2>&nbsp;&nbsp;网站施工中。。。</h2>
+	<h2>&emsp;About Me</h2>
+    <p>&emsp;&emsp;Hi, I am <strong>Tianlin Huang</strong>. I'm an undergraduate student at <strong>the University of Virginia</strong>. My intended major is <strong>Computer Science</strong> at the School of &emsp;&emsp;Engineering.</p>
+
+    <p>&emsp;&emsp;This is my personal blog empowered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll.</a></p>
+    
+    <p>&emsp;&emsp;Welcome to take a look at my <a href="https://pages.github.com/billy506">GitHub</a> and contact me through emails (<a href="th3xyr@virginia.edu">th3xyr@virginia.edu</a>).</p>
+	
+	<h2>&emsp;Contact</h2>
+	<h3>&emsp;&emsp;Email: <a href="mailto:th3xyr@virginia.edu ">th3xyr@virginia.edu </a></h3>
+		<h3>&emsp;&emsp;Phone: (+86)189-2513-1717</h3>
 		</div>
+	
 </body>
 </html>
