--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 	<div class="about">	
 	<h2>&emsp;About Me</h2>
-    <p>&emsp;&emsp;Hi, I am <strong>Tianlin Huang</strong>. I'm an undergraduate student at <strong>the University of Virginia</strong>. My intended major is <strong>Computer Science</strong> at the School of &emsp;&emsp;Engineering.</p>
+    <p>&emsp;&emsp;Hi, I am <strong>Tianlin Huang</strong>. I'm an undergraduate student at <strong>the University of Virginia</strong>. My intended major is <strong>Computer Science</strong> at the School of Engineering.</p>
 
     <p>&emsp;&emsp;This is my personal blog empowered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll.</a></p>
     
