--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p>&emsp;&emsp;This is my personal blog empowered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll.</a></p>
     
-    <p>&emsp;&emsp;Welcome to take a look at my <a href="https://pages.github.com/billy506">GitHub</a> and contact me through emails (<a href="th3xyr@virginia.edu">th3xyr@virginia.edu</a>).</p>
+    <p>&emsp;&emsp;Welcome to take a look at my <a href="https://www.github.com/billy506">GitHub</a> and contact me through emails (<a href="th3xyr@virginia.edu">th3xyr@virginia.edu</a>).</p>
 	<br>
 	<h2>&emsp;Contact</h2>
 	<h3>&emsp;&emsp;Email: <a href="mailto:th3xyr@virginia.edu ">th3xyr@virginia.edu </a></h3>
